# pgdbf

./: .gitignore  Makefile.am  Makefile.in  README  README.md  README.mdown  config.h.in  configure  configure.ac
ancient/: README  xbasetopg.patch
doc/: Makefile.am  Makefile.in  pgdbf.man  release-checklist.mdown
freebsd/: Makefile  distinfo
src/: Makefile.am  Makefile.in  getreservedwords.py  pgdbf.c  pgdbf.h  strlcat.h
test/: README.md  runtests.py
test/cases/: SystemParameter.json  easton2.json  jmarlin_issue_17.json
test/cases/data/: SystemParameter.dbf  easton2.dbf  jmarlin_issue_17_data.dbf
web/: Makefile  favicon.xcf  index.html  pgdbf.1.html  style.css  xeleph.xcf  xeleph2.xcf
